--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ myip/
 freshermeat/
 showcase-recipe-search/
 zealusercontributions/
+vivliostyle.js/
 
 # watch
 materialflux/
@@ -96,3 +97,4 @@ earlume/
 noisecraft/
 lyrics-poster/
 flatdraw/
+etytree/
