add cnvrt, gifconverter, video-gif-web-converter

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ freshermeat/
 showcase-recipe-search/
 zealusercontributions/
 vivliostyle.js/
+web-check/
 
 # watch
 materialflux/
@@ -98,3 +99,6 @@ noisecraft/
 lyrics-poster/
 flatdraw/
 etytree/
+gifconverter/
+video-gif-web-converter/
+cnvrt/
